# StockTeller

./: README.md  main.py  pyproject.toml
docs/: casablanca-exchange.md  html-parser-guide.md  scraper-config-guide.md
src/: database.py  dataframe_utils.py  formatting.py  html_parser.py  http_client.py  quote_scraper.py  scraper_config.py
tests/: test_html_parser.py
