[project]
name = "stockteller"
version = "0.1.0"
description = "Scrape the Casablanca stock exchange, analyze financial data, and predict stock trends with ML + LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
